--- a/project2/Project2.ipynb
+++ b/project2/Project2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def getTextByElement(soup, tag, attrs):\n",
+    "    outputList = []\n",
+    "    for element in soup.find_all(tag, attrs):\n",
+    "        outputList.append(element.text)\n",
+    "    return outputList"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,6 +145,7 @@
     "        print(f\"Branches points from here: {len(links)}\")\n",
     "        nextLink = links[random.randint(0, len(links) - 1)]   \n",
     "        \n",
+    "        # This part could be improved on\n",
     "        while(nextLink in visitedLinks):\n",
     "            nextLink = links[random.randint(0, len(links) - 1)]   \n",
     "                     \n",
@@ -144,7 +158,66 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Skip to main content\n",
+      "IT3038C\n",
+      "Syllabus\n",
+      "Modules\n",
+      "GitHub\n",
+      "Module 1 – Getting Started with your VMs\n",
+      "Module 2 – Bash\n",
+      "Module 3 – PowerShell\n",
+      "Module 4 – Git and GitHub\n",
+      "Module 5 – Python\n",
+      "Module 6 – Node JS\n",
+      "Module 7 - Modules, Plugins, Debugging\n",
+      "Module 8 – Data Types & RegEx\n",
+      "Module 9 – Web Scraping\n",
+      "Module 10 – Working with APIs\n",
+      "Module 11 – Heroku\n",
+      "Module 12 – Websites in Python using Flask\n",
+      "WIP\n",
+      "\n",
+      "https://www.debuggex.com/cheatsheet/regex/python\n",
+      "https://www.crummy.com/software/BeautifulSoup/bs4/doc/\n",
+      "http://www.pythonforbeginners.com/beautifulsoup/beautifulsoup-4-python\n",
+      "https://regex101.com/\n",
+      "https://twitter.com/regexdrill\n",
+      "​\n",
+      "​\n",
+      "​\n",
+      "​\n",
+      "https://regex101.com/\n",
+      "http://webscraper.io/test-sites/e-commerce/allinone/phones\n",
+      "https://www.reebok.com/us/flexagon-energy-shoes---preschool/DV8354.html\n",
+      "​\n",
+      "PreviousModule 8 – Data Types & RegEx\n",
+      "NextModule 10 – Working with APIs\n",
+      "Web Scraping\n",
+      "Linux\n",
+      "Windows\n",
+      "Regular Expressions\n",
+      "Lab 8\n",
+      "GitHub\n"
+     ]
+    }
+   ],
+   "source": [
+    "soup = getSoup('https://it3038c.github.io/IT3038C/modules/9')\n",
+    "elements = getTextByElement(soup, 'h1', {})\n",
+    "for element in elements:\n",
+    "    print(element)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -153,59 +226,15 @@
      "text": [
       "Current Link: https://analytics.usa.gov\n",
       "Branches points from here: 17\n",
-      "Current Link: https://cloud.gov/\n",
-      "Branches points from here: 19\n",
-      "Current Link: https://18f.gsa.gov/\n",
-      "Branches points from here: 15\n",
-      "Current Link: https://github.com/18F/18f.gsa.gov/issues/new\n",
-      "Branches points from here: 3\n",
-      "Current Link: https://github.com/contact\n",
-      "Branches points from here: 17\n",
-      "Current Link: https://docs.github.com/desktop\n",
-      "Branches points from here: 20\n",
-      "Current Link: https://github.blog/changelog/label/desktop\n",
-      "Branches points from here: 156\n",
-      "Current Link: https://github.blog/changelog/label/releases/\n",
-      "Branches points from here: 185\n",
-      "Current Link: https://github.blog/changelog/label/education/\n",
-      "Branches points from here: 204\n",
-      "Current Link: https://github.blog/\n",
-      "Branches points from here: 210\n",
-      "Current Link: https://github.community/\n",
-      "Branches points from here: 23\n",
-      "Current Link: https://github.com/about\n",
-      "Branches points from here: 42\n",
-      "Current Link: https://support.github.com?tags=dotcom-footer\n",
-      "Branches points from here: 17\n",
-      "Current Link: https://docs.github.com/github/managing-subscriptions-and-notifications-on-github\n",
-      "Branches points from here: 16\n",
-      "Current Link: https://electronjs.org/docs\n",
-      "Branches points from here: 17\n",
-      "Current Link: https://github.com/electron/electron/tree/v21.2.0/docs/fiddles/quick-start\n",
-      "Branches points from here: 27\n",
-      "Current Link: https://resources.github.com/ci-cd/\n",
-      "Branches points from here: 94\n",
-      "Current Link: https://atom.io\n",
-      "Branches points from here: 22\n",
-      "Current Link: https://flight-manual.atom.io/faq/\n",
-      "Branches points from here: 15\n",
-      "Current Link: https://atom.io/\n",
-      "Branches points from here: 22\n",
-      "Current Link: https://electronjs.org\n",
-      "Branches points from here: 29\n",
-      "Current Link: https://github.com/electron\n",
-      "Branches points from here: 22\n",
-      "Current Link: https://docs.github.com\n",
-      "Branches points from here: 20\n",
-      "Current Link: https://www.githubstatus.com/\n",
-      "Branches points from here: 62\n",
-      "Current Link: https://github.com/support\n",
-      "Branches points from here: 17\n",
-      "Current Link: https://githubstatus.com\n",
+      "Current Link: https://github.com/GSA/analytics.usa.gov\n",
+      "Branches points from here: 74\n",
+      "Current Link: https://cli.github.com\n",
+      "Branches points from here: 40\n",
+      "Current Link: https://www.facebook.com/GitHub\n",
       "\n",
       "Link chain ended\n",
-      "Total links visited: 26\n",
-      "Links visited: {'https://github.blog/changelog/label/education/', 'https://atom.io/', 'https://analytics.usa.gov', 'https://github.community/', 'https://docs.github.com/github/managing-subscriptions-and-notifications-on-github', 'https://atom.io', 'https://github.blog/changelog/label/desktop', 'https://github.com/electron/electron/tree/v21.2.0/docs/fiddles/quick-start', 'https://docs.github.com/desktop', 'https://support.github.com?tags=dotcom-footer', 'https://github.com/electron', 'https://resources.github.com/ci-cd/', 'https://electronjs.org/docs', 'https://github.com/about', 'https://github.com/contact', 'https://github.com/support', 'https://github.blog/', 'https://www.githubstatus.com/', 'https://docs.github.com', 'https://github.com/18F/18f.gsa.gov/issues/new', 'https://electronjs.org', 'https://flight-manual.atom.io/faq/', 'https://githubstatus.com', 'https://18f.gsa.gov/', 'https://cloud.gov/', 'https://github.blog/changelog/label/releases/'}\n"
+      "Total links visited: 4\n",
+      "Links visited: {'https://cli.github.com', 'https://www.facebook.com/GitHub', 'https://analytics.usa.gov', 'https://github.com/GSA/analytics.usa.gov'}\n"
      ]
     }
    ],
