--- a/project2/Project2.ipynb
+++ b/project2/Project2.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +39,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +60,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +74,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +119,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,53 +158,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Skip to main content\n",
-      "IT3038C\n",
-      "Syllabus\n",
-      "Modules\n",
-      "GitHub\n",
-      "Module 1 – Getting Started with your VMs\n",
-      "Module 2 – Bash\n",
-      "Module 3 – PowerShell\n",
-      "Module 4 – Git and GitHub\n",
-      "Module 5 – Python\n",
-      "Module 6 – Node JS\n",
-      "Module 7 - Modules, Plugins, Debugging\n",
-      "Module 8 – Data Types & RegEx\n",
-      "Module 9 – Web Scraping\n",
-      "Module 10 – Working with APIs\n",
-      "Module 11 – Heroku\n",
-      "Module 12 – Websites in Python using Flask\n",
-      "WIP\n",
-      "\n",
-      "https://www.debuggex.com/cheatsheet/regex/python\n",
-      "https://www.crummy.com/software/BeautifulSoup/bs4/doc/\n",
-      "http://www.pythonforbeginners.com/beautifulsoup/beautifulsoup-4-python\n",
-      "https://regex101.com/\n",
-      "https://twitter.com/regexdrill\n",
-      "​\n",
-      "​\n",
-      "​\n",
-      "​\n",
-      "https://regex101.com/\n",
-      "http://webscraper.io/test-sites/e-commerce/allinone/phones\n",
-      "https://www.reebok.com/us/flexagon-energy-shoes---preschool/DV8354.html\n",
-      "​\n",
-      "PreviousModule 8 – Data Types & RegEx\n",
-      "NextModule 10 – Working with APIs\n",
-      "Web Scraping\n",
-      "Linux\n",
-      "Windows\n",
-      "Regular Expressions\n",
-      "Lab 8\n",
-      "GitHub\n"
+      "Module 9 – Web Scraping\n"
      ]
     }
    ],
@@ -217,7 +178,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -226,15 +187,59 @@
      "text": [
       "Current Link: https://analytics.usa.gov\n",
       "Branches points from here: 17\n",
-      "Current Link: https://github.com/GSA/analytics.usa.gov\n",
-      "Branches points from here: 74\n",
-      "Current Link: https://cli.github.com\n",
-      "Branches points from here: 40\n",
-      "Current Link: https://www.facebook.com/GitHub\n",
+      "Current Link: https://github.com/18F/analytics-reporter\n",
+      "Branches points from here: 46\n",
+      "Current Link: https://docs.github.com\n",
+      "Branches points from here: 20\n",
+      "Current Link: https://github.com/github/docs/blob/main/CONTRIBUTING.md\n",
+      "Branches points from here: 45\n",
+      "Current Link: https://support.github.com?tags=dotcom-footer\n",
+      "Branches points from here: 17\n",
+      "Current Link: https://docs.github.com/github/managing-subscriptions-and-notifications-on-github\n",
+      "Branches points from here: 16\n",
+      "Current Link: https://github.community/\n",
+      "Branches points from here: 22\n",
+      "Current Link: https://www.githubstatus.com/\n",
+      "Branches points from here: 62\n",
+      "Current Link: https://www.githubstatus.com/incidents/3ktldkb3r6f8\n",
+      "Branches points from here: 59\n",
+      "Current Link: https://www.atlassian.com/legal/privacy-policy\n",
+      "Branches points from here: 65\n",
+      "Current Link: https://www.atlassian.com/pl/legal/privacy-policy\n",
+      "Branches points from here: 65\n",
+      "Current Link: http://www.privacyshield.gov/\n",
+      "Branches points from here: 9\n",
+      "Current Link: http://www.privacyshield.gov/PrivacyShield/ApplyNow\n",
+      "Branches points from here: 11\n",
+      "Current Link: http://www.privacyshield.gov/list\n",
+      "Branches points from here: 9\n",
+      "Current Link: https://www.usa.gov\n",
+      "Branches points from here: 7\n",
+      "Current Link: https://twitter.com/USAgov\n",
+      "Branches points from here: 6\n",
+      "Current Link: https://twitter.com/tos\n",
+      "Branches points from here: 122\n",
+      "Current Link: https://www.twitter.com/privacy\n",
+      "Branches points from here: 92\n",
+      "Current Link: https://twitter.com/privacy\n",
+      "Branches points from here: 92\n",
+      "Current Link: https://careers.twitter.com/\n",
+      "Branches points from here: 47\n",
+      "Current Link: https://www.twitterflightschool.com/sl/382652bc\n",
+      "Branches points from here: 17\n",
+      "Current Link: http://marketing.twitter.com\n",
+      "Branches points from here: 60\n",
+      "Current Link: https://business.twitter.com/en/help.html\n",
+      "Branches points from here: 47\n",
+      "Current Link: https://investor.twitterinc.com/\n",
+      "Branches points from here: 56\n",
+      "Current Link: https://dev.twitter.com/overview/documentation\n",
+      "Branches points from here: 73\n",
+      "Current Link: https://publish.twitter.com\n",
       "\n",
       "Link chain ended\n",
-      "Total links visited: 4\n",
-      "Links visited: {'https://cli.github.com', 'https://www.facebook.com/GitHub', 'https://analytics.usa.gov', 'https://github.com/GSA/analytics.usa.gov'}\n"
+      "Total links visited: 26\n",
+      "Links visited: {'https://docs.github.com', 'https://investor.twitterinc.com/', 'https://www.twitter.com/privacy', 'https://careers.twitter.com/', 'http://marketing.twitter.com', 'https://publish.twitter.com', 'http://www.privacyshield.gov/list', 'https://dev.twitter.com/overview/documentation', 'https://www.usa.gov', 'https://www.githubstatus.com/incidents/3ktldkb3r6f8', 'https://github.com/github/docs/blob/main/CONTRIBUTING.md', 'https://www.twitterflightschool.com/sl/382652bc', 'https://www.atlassian.com/legal/privacy-policy', 'http://www.privacyshield.gov/PrivacyShield/ApplyNow', 'http://www.privacyshield.gov/', 'https://docs.github.com/github/managing-subscriptions-and-notifications-on-github', 'https://twitter.com/USAgov', 'https://www.githubstatus.com/', 'https://analytics.usa.gov', 'https://github.com/18F/analytics-reporter', 'https://support.github.com?tags=dotcom-footer', 'https://twitter.com/privacy', 'https://business.twitter.com/en/help.html', 'https://github.community/', 'https://www.atlassian.com/pl/legal/privacy-policy', 'https://twitter.com/tos'}\n"
      ]
     }
    ],
