--- a/project2/Project2.ipynb
+++ b/project2/Project2.ipynb
@@ -9,12 +9,20 @@
     "This project is meant to be the start of my own collection of webscraping functionalities.\n",
     "Currently I have created a function that randomly traverses the web by grabbing links on webpages and visiting them.\n",
     "\n",
-    "I would eventually want to do a bunch of stuff with text analysis, word cloud generation, web sockets, and other networking functionalities."
+    "I would eventually want to do a bunch of stuff with text analysis, word cloud generation, web sockets, and other networking functionalities.\n",
+    "\n",
+    "Instructions on running the project: \n",
+    "\n",
+    "pip install notebook\n",
+    "\n",
+    "Then in the project directory:\n",
+    "\n",
+    "jupyter notebook"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -39,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -60,7 +68,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -74,7 +82,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -89,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -119,7 +127,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -132,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -158,9 +166,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 35,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Module 9 – Web Scraping\n"
+     ]
+    }
+   ],
    "source": [
     "soup = getSoup('https://it3038c.github.io/IT3038C/modules/9')\n",
     "elements = getTextByElement(soup, 'h1', {})\n",
@@ -170,9 +186,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Current Link: https://analytics.usa.gov\n",
+      "Branches points from here: 17\n",
+      "Current Link: https://github.com/18F/analytics-reporter\n",
+      "Branches points from here: 46\n",
+      "Current Link: https://resources.github.com/\n",
+      "Branches points from here: 46\n",
+      "Current Link: https://github.com/pricing\n",
+      "Branches points from here: 103\n",
+      "Current Link: https://docs.github.com\n",
+      "Branches points from here: 20\n",
+      "Current Link: https://www.githubstatus.com/\n",
+      "Branches points from here: 61\n",
+      "Current Link: https://docs.github.com/en/rest/migrations/source-imports\n",
+      "Branches points from here: 25\n",
+      "Current Link: https://docs.github.com/rest/reference/migrations#cancel-an-import\n",
+      "Branches points from here: 16\n",
+      "Current Link: https://github.com/security\n",
+      "Branches points from here: 55\n",
+      "Current Link: https://www.facebook.com/GitHub\n",
+      "\n",
+      "Link chain ended\n",
+      "Total links visited: 10\n",
+      "Links visited: {'https://www.facebook.com/GitHub', 'https://docs.github.com/rest/reference/migrations#cancel-an-import', 'https://resources.github.com/', 'https://github.com/18F/analytics-reporter', 'https://github.com/security', 'https://analytics.usa.gov', 'https://docs.github.com', 'https://docs.github.com/en/rest/migrations/source-imports', 'https://www.githubstatus.com/', 'https://github.com/pricing'}\n"
+     ]
+    }
+   ],
    "source": [
     "testURL = 'https://analytics.usa.gov'\n",
     "traverseWeb(testURL, set())"
